// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChartTransformation > Legend config > should be always disabled for single series and push this info out 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "colors": {
          "colorAssignments": [
            {
              "color": {
                "type": "guid",
                "value": "1",
              },
              "headerItem": {
                "measureHeaderItem": {
                  "format": "$#,##0.00",
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
                  "name": "Amount",
                  "ref": undefined,
                },
              },
            },
          ],
          "colorPalette": undefined,
        },
        "propertiesMeta": {
          "isFilteringRecommended": false,
          "legend_enabled": false,
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ChartTransformation > Legend config > should be enabled & on the top by default and push this info out 1`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "colors": {
          "colorAssignments": [
            {
              "color": {
                "type": "guid",
                "value": "1",
              },
              "headerItem": {
                "measureHeaderItem": {
                  "format": "$#,##0.00",
                  "identifier": "87a053b0-3947-49f3-b0c5-de53fd01f050",
                  "localIdentifier": "m_87a053b0_3947_49f3_b0c5_de53fd01f050",
                  "name": "Amount",
                  "ref": undefined,
                },
              },
            },
            {
              "color": {
                "type": "guid",
                "value": "2",
              },
              "headerItem": {
                "measureHeaderItem": {
                  "format": "$#,##0.00",
                  "identifier": "e519fa2a-86c3-4e32-8313-0c03062348j3",
                  "localIdentifier": "m_e519fa2a_86c3_4e32_8313_0c03062348j3",
                  "name": "Won",
                  "ref": undefined,
                },
              },
            },
            {
              "color": {
                "type": "guid",
                "value": "3",
              },
              "headerItem": {
                "measureHeaderItem": {
                  "format": "#,#.##",
                  "localIdentifier": "m_358184a8_9fa7cb9ce4d2947059b490e24a925317",
                  "name": "Calculated 'Lost' measure",
                  "ref": undefined,
                },
              },
            },
            {
              "color": {
                "type": "guid",
                "value": "4",
              },
              "headerItem": {
                "measureHeaderItem": {
                  "format": "#,#.##",
                  "localIdentifier": "m_7ff816a7_82e019308ff681db5738ce5040bc533d",
                  "name": "Ratio of Won and Lost",
                  "ref": undefined,
                },
              },
            },
          ],
          "colorPalette": undefined,
        },
        "propertiesMeta": {
          "isFilteringRecommended": false,
          "legend_enabled": true,
        },
      },
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`ChartTransformation > should use custom color palette with outline fill 1`] = `
[
  {
    "borderColor": "rgb(0,0,0)",
    "color": "rgb(230,230,230)",
  },
  {
    "borderColor": "rgb(255,0,0)",
    "color": "rgb(255,230,230)",
  },
]
`;

exports[`ChartTransformation > should use custom color palette with pattern fill 1`] = `
[
  {
    "borderColor": "rgb(0,0,0)",
    "color": {
      "pattern": {
        "color": "rgb(0,0,0)",
        "height": 8,
        "opacity": 1,
        "path": {
          "d": "M4 0L8 4L4 8L0 4Z",
          "strokeWidth": 1,
        },
        "width": 8,
      },
    },
  },
  {
    "borderColor": "rgb(255,0,0)",
    "color": {
      "pattern": {
        "color": "rgb(255,0,0)",
        "height": 4,
        "opacity": 1,
        "path": {
          "d": "M0 0H1V4H0Z",
          "strokeWidth": 1,
        },
        "width": 4,
      },
    },
  },
]
`;

exports[`ChartTransformation > should use custom color palette with solid fill 1`] = `
[
  {
    "borderColor": undefined,
    "color": "rgb(0,0,0)",
  },
  {
    "borderColor": undefined,
    "color": "rgb(255,0,0)",
  },
]
`;

exports[`ChartTransformation > should use custom color palette with undefined fill 1`] = `
[
  {
    "borderColor": undefined,
    "color": "rgb(0,0,0)",
  },
  {
    "borderColor": undefined,
    "color": "rgb(255,0,0)",
  },
]
`;
